<resources>
    <!-- app_name is provided by build.gradle resValue -->
    <string name="powered_by">Powered by OpenVisionX</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="camera">Camera</string>
    <string name="thresholds">Thresholds</string>
    <string name="reset">Reset</string>

    <!-- Messages Preferences -->
    <string name="camera_lens">Camera lens</string>
    <string name="liveness_threshold">Liveness</string>
    <string name="enroll_liveness_threshold">Registration Liveness</string>
    <string name="liveness_level">Liveness Level</string>
    <string name="identify_threshold">Identify</string>
    <string name="yaw_threshold">Yaw</string>
    <string name="roll_threshold">Roll</string>
    <string name="pitch_threshold">Pitch</string>
    <string name="occlusion_threshold">Face occlusion</string>
    <string name="eyeclose_threshold">Eye closed</string>
    <string name="mouthopen_threshold">Mouth opened</string>
    <string name="restore_default_settings">Restore default settings</string>
    <string name="clear_all_person">Clear all person</string>

    <string name="select_picture">Select Picture</string>

    <string name="multiple_face_detected">Multiple face detected!</string>
    <string name="no_face_detected">No face detected!</string>
    <string name="person_enrolled">Person enrolled!</string>
    <string name="liveness_check_failed">Liveness check failed!</string>
    <string name="restored_default_settings">Restored default settings</string>
    <string name="cleared_all_person">Cleared all person</string>
    <string name="invalid_value">Invalid value</string>

</resources>
