<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_camera"
        app:title="@string/camera"
        >

        <ListPreference
            app:defaultValue="front"
            app:entries="@array/camera_lens"
            app:entryValues="@array/camera_lens_values"
            app:key="camera_lens"
            app:title="@string/camera_lens"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_threshold"
        app:title="@string/thresholds">

        <EditTextPreference
            app:defaultValue="0.82"
            app:key="liveness_threshold"
            app:title="@string/liveness_threshold"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:defaultValue="0.72"
            app:key="enroll_liveness_threshold"
            app:title="@string/enroll_liveness_threshold"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/liveness_level"
            app:entryValues="@array/liveness_level_values"
            app:key="liveness_level"
            app:title="@string/liveness_level"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.62"
            app:key="identify_threshold"
            app:title="@string/identify_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="40.0"
            app:key="yaw_threshold"
            app:title="@string/yaw_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="40.0"
            app:key="roll_threshold"
            app:title="@string/roll_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="40.0"
            app:key="pitch_threshold"
            app:title="@string/pitch_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="occlusion_threshold"
            app:title="@string/occlusion_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="eyeclose_threshold"
            app:title="@string/eyeclose_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="mouthopen_threshold"
            app:title="@string/mouthopen_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="face_quality_threshold"
            app:title="Minimum face quality"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.15"
            app:key="min_luminance"
            app:title="Minimum face luminance"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.90"
            app:key="max_luminance"
            app:title="Maximum face luminance"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="Performance">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="high_performance_mode"
            app:title="High Performance Mode"
            app:summary="Disables intensive mesh animations for faster identification" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_reset"
        app:title="@string/reset">

        <Preference
            app:key="restore_default_settings"
            app:title="@string/restore_default_settings" />

        <Preference
            app:key="clear_all_person"
            app:title="@string/clear_all_person" />

    </PreferenceCategory>

</PreferenceScreen>
